force-app/main/default/objects/Animal__c/Animal__c.object-meta.xml
<CustomObject>
    <description
  >Core animal record for intake, housing, welfare tracking, and episode management.</description>
    <label>Animal</label>
    <nameField>
        <label>Animal Number</label>
        <displayFormat>AN-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>