force-app/main/default/objects/Animal__c/fields/Breed_Primary__c.field-meta.xml
<CustomField>
    <fullName>Breed_Primary__c</fullName>
    <description>Primary breed or type description.</description>
    <label>Primary Breed</label>
    <length>80</length>
    <type>Text</type>
</CustomField>