force-app/main/default/objects/Animal__c/fields/Breed_Secondary__c.field-meta.xml
<CustomField>
    <fullName>Breed_Secondary__c</fullName>
    <description>Secondary breed or type description when known.</description>
    <label>Secondary Breed</label>
    <length>80</length>
    <type>Text</type>
</CustomField>