force-app/main/default/objects/Animal__c/fields/Care_Visual_Status__c.field-meta.xml
<CustomField>
    <fullName>Care_Visual_Status__c</fullName>
    <description
  >Provides a visual care-plan signal derived from the animal's current care status.</description>
    <formula>CASE(
  TEXT(Current_Care_Status__c),
  "Open", "Blue - Active care",
  "Planned", "Purple - Planned care",
  "On Hold", "Amber - On hold",
  "Closed", "Green - Care closed",
  "Cancelled", "Grey - Cancelled",
  "Grey - Not set"
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText
  >Derived automatically from Current Care Status for care coordination.</inlineHelpText>
    <label>Care Signal</label>
    <type>Text</type>
</CustomField>