force-app/main/default/objects/Animal__c/fields/Current_Care_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Care_Status__c</fullName>
    <description
  >System-maintained summary of the active episode status.</description>
    <inlineHelpText
  >This field is system maintained by operational automation.</inlineHelpText>
    <label>Current Care Status</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>