force-app/main/default/objects/Animal__c/fields/Current_Episode__c.field-meta.xml
<CustomField>
    <fullName>Current_Episode__c</fullName>
    <description>System-maintained pointer to the active episode.</description>
    <inlineHelpText
  >This field is system maintained by Phase I automation.</inlineHelpText>
    <label>Current Episode</label>
    <referenceTo>Animal_Episode__c</referenceTo>
    <relationshipLabel>Current Animals</relationshipLabel>
    <relationshipName>Current_Animals</relationshipName>
    <type>Lookup</type>
</CustomField>