force-app/main/default/objects/Animal__c/fields/Current_Housing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Current_Housing_Unit__c</fullName>
    <description
  >System-maintained pointer to the active housing unit.</description>
    <inlineHelpText
  >This field is system maintained by Phase I automation.</inlineHelpText>
    <label>Current Housing Unit</label>
    <referenceTo>Housing_Unit__c</referenceTo>
    <relationshipLabel>Currently Housed Animals</relationshipLabel>
    <relationshipName>Currently_Housed_Animals</relationshipName>
    <type>Lookup</type>
</CustomField>