force-app/main/default/objects/Animal__c/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <description>System-maintained lifecycle status summary.</description>
    <inlineHelpText
  >This field is system maintained by operational automation.</inlineHelpText>
    <label>Current Status</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Pending Intake</fullName>
            </value>
            <value>
                <fullName>In Care</fullName>
            </value>
            <value>
                <fullName>Exited Care</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>