force-app/main/default/objects/Animal__c/fields/Current_Welfare_Risk__c.field-meta.xml
<CustomField>
    <fullName>Current_Welfare_Risk__c</fullName>
    <description>Current welfare risk flag for Phase I reporting.</description>
    <label>Current Welfare Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Welfare_Risk</valueSetName>
    </valueSet>
</CustomField>