force-app/main/default/objects/Animal__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Confirmed or best-known date of birth.</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>