force-app/main/default/objects/Animal__c/fields/Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Death__c</fullName>
    <description>Known date of death.</description>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>