force-app/main/default/objects/Animal__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>User-facing display name for the animal.</description>
    <inlineHelpText
  >Enter the name staff should use when referring to the animal.</inlineHelpText>
    <label>Display Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>