force-app/main/default/objects/Animal__c/fields/Estimated_Age_Months__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Age_Months__c</fullName>
    <description
  >Estimated age in whole months when the exact birth date is unknown.</description>
    <label>Estimated Age (Months)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>