force-app/main/default/objects/Animal__c/fields/Is_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Is_Deceased__c</fullName>
    <description>Marks the animal as deceased.</description>
    <label>Is Deceased</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>