force-app/main/default/objects/Animal__c/fields/Profile_Image__c.field-meta.xml
<CustomField>
    <fullName>Profile_Image__c</fullName>
    <description
  >Displays the animal's primary image directly on the record page for fast visual identification by welfare staff.</description>
    <formula>IF(
  ISBLANK(Primary_Image_URL__c),
  "No profile image",
  IMAGE(Primary_Image_URL__c, Display_Name__c, 220, 220)
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the image from Primary Image URL when one is available.</inlineHelpText>
    <label>Profile Image</label>
    <type>Text</type>
</CustomField>