force-app/main/default/objects/Animal__c/fields/Reproductive_Status__c.field-meta.xml
<CustomField>
    <fullName>Reproductive_Status__c</fullName>
    <description>Current reproductive status of the animal.</description>
    <label>Reproductive Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Reproductive_Status</valueSetName>
    </valueSet>
</CustomField>