force-app/main/default/objects/Animal__c/fields/Responsible_Account__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Account__c</fullName>
    <description
  >Organisation currently responsible for the animal.</description>
    <label>Responsible Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Responsible Animals</relationshipLabel>
    <relationshipName>Responsible_Animals</relationshipName>
    <type>Lookup</type>
</CustomField>