force-app/main/default/objects/Animal__c/fields/Responsible_Contact__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Contact__c</fullName>
    <description>Primary contact responsible for the animal.</description>
    <label>Responsible Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Responsible Contact Animals</relationshipLabel>
    <relationshipName>Responsible_Contact_Animals</relationshipName>
    <type>Lookup</type>
</CustomField>