force-app/main/default/objects/Animal__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <description>Recorded sex for the animal.</description>
    <label>Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Sex</valueSetName>
    </valueSet>
</CustomField>