force-app/main/default/objects/Animal__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <description>Primary species classification.</description>
    <inlineHelpText>Choose the animal species.</inlineHelpText>
    <label>Species</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Species</valueSetName>
    </valueSet>
</CustomField>