force-app/main/default/objects/Animal__c/validationRules/A360_Animal_Deceased_Date_Required.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description
  >Requires a date of death when the animal is marked as deceased.</description>
    <errorConditionFormula
  >AND(Is_Deceased__c, ISBLANK(Date_of_Death__c))</errorConditionFormula>
    <errorMessage
  >Enter a date of death when the animal is marked as deceased.</errorMessage>
    <fullName>A360_Animal_Deceased_Date_Required</fullName>
</ValidationRule>